--- a/app/src/main/res/layout/activity_list.xml
+++ b/app/src/main/res/layout/activity_list.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:id="@+id/addLayout"
-    tools:context=".List">
+    tools:context=".ListUser">
     <include
         android:id="@+id/aaLayout"
         layout="@layout/aa"/>
