--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -41,7 +41,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
         android:layout_marginTop="25dp"
-        android:text="既にアカウントをお持ちですか?"
+        android:text="tuan"
         android:textColor="@color/white"
         android:textSize="30sp"
         android:textStyle="bold"
