--- a/app/src/main/res/layout/aa.xml
+++ b/app/src/main/res/layout/aa.xml
@@ -5,4 +5,11 @@
     android:layout_height="?attr/actionBarSize"
     android:background="@color/colorPrimaryDark"
     android:theme="@style/ThemeOverlay.AppCompat.ActionBar">
+    <Button
+        android:id="@+id/btnLogOut"
+        android:text="LogOut"
+        android:layout_gravity="center|end"
+        android:layout_marginRight="20dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"/>
 </androidx.appcompat.widget.Toolbar>
