--- a/app/src/main/res/layout/single_view.xml
+++ b/app/src/main/res/layout/single_view.xml
@@ -5,7 +5,7 @@
     android:layout_height="wrap_content"
     android:id="@+id/addLayout"
     xmlns:app="http://schemas.android.com/apk/res-auto">
-    <EditText
+    <TextView
         android:id="@+id/name"
        android:hint="名前"
         app:layout_constraintTop_toTopOf="parent"
@@ -25,8 +25,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="@id/name"
+        app:layout_constraintEnd_toEndOf="@id/edit"
         android:textSize="20sp"
         android:textColor="@color/colorPrimaryDark"
         android:padding="10dp"
