--- a/app/src/main/res/layout/aa.xml
+++ b/app/src/main/res/layout/aa.xml
@@ -13,13 +13,14 @@
         android:layout_gravity="left"
         android:layout_marginLeft="20dp"
         android:layout_marginTop="8dp"
+        android:textStyle="bold"
         android:layout_marginBottom="8dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
     <Button
         android:id="@+id/add"
         android:background="@drawable/white_square_bg"
-        android:layout_gravity="center|end"
+        android:layout_gravity="right"
         android:text="+"
         android:layout_marginTop="8dp"
         android:layout_marginBottom="8dp"
