--- a/app/src/main/res/layout/activity_face_to_face_picker.xml
+++ b/app/src/main/res/layout/activity_face_to_face_picker.xml
@@ -16,39 +16,157 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <EditText
-            android:gravity="center"
             android:id="@+id/editTextTextPersonName"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:ems="10"
-            android:inputType="textPersonName"
-            android:hint="名前" />
-
-        <EditText
             android:gravity="center"
-            android:id="@+id/editTextTextPersonName3"
-            android:layout_width="match_parent"
+            android:hint="名前"
+            android:inputType="textPersonName" />
+
+
+
+
+
+        <LinearLayout
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:ems="10"
-            android:inputType="textPersonName"
-            android:hint="メール"/>
+            android:orientation="horizontal">
 
-        <EditText
-            android:gravity="center"
-            android:id="@+id/editTextTextPersonName4"
-            android:layout_width="match_parent"
+            <EditText
+                android:layout_weight="1"
+                android:id="@+id/x1k"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:ems="10"
+                android:gravity="center"
+                android:hint="結果"
+                android:inputType="textPersonName" />
+
+            <EditText
+                android:layout_weight="1"
+                android:id="@+id/x1n"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:ems="10"
+                android:gravity="center"
+                android:hint="日時"
+                android:inputType="textPersonName" />
+
+            <EditText
+                android:layout_weight="1"
+                android:id="@+id/x1km"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:ems="10"
+                android:gravity="center"
+                android:hint="コメント"
+                android:inputType="textPersonName" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:ems="10"
-            android:inputType="number"
-            android:hint="電話" />
+            android:orientation="horizontal">
 
-        <TextView
-            android:gravity="center"
-            android:textColor="@color/black"
-            android:id="@+id/textView"
-            android:layout_width="match_parent"
-            android:layout_height="40dp"
-            android:text="写真アップロード" />
+            <EditText
+                android:layout_weight="1"
+                android:id="@+id/x2k"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:ems="10"
+                android:gravity="center"
+                android:hint="結果"
+                android:inputType="textPersonName" />
+
+            <EditText
+                android:layout_weight="1"
+                android:id="@+id/x2n"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:ems="10"
+                android:gravity="center"
+                android:hint="日時"
+                android:inputType="textPersonName" />
+
+            <EditText
+                android:layout_weight="1"
+                android:id="@+id/x2km"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:ems="10"
+                android:gravity="center"
+                android:hint="コメント"
+                android:inputType="textPersonName" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <EditText
+                android:layout_weight="1"
+                android:id="@+id/x3k"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:ems="10"
+                android:gravity="center"
+                android:hint="結果"
+                android:inputType="textPersonName" />
+
+            <EditText
+                android:layout_weight="1"
+                android:id="@+id/x3n"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:ems="10"
+                android:gravity="center"
+                android:hint="日時"
+                android:inputType="textPersonName" />
+
+            <EditText
+                android:layout_weight="1"
+                android:id="@+id/x3km"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:ems="10"
+                android:gravity="center"
+                android:hint="コメント"
+                android:inputType="textPersonName" />
+        </LinearLayout>
+
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+
+
+            <EditText
+                android:layout_weight="1"
+                android:id="@+id/kensyuu"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:ems="10"
+                android:gravity="center"
+                android:hint="日時"
+                android:inputType="textPersonName" />
+
+            <EditText
+                android:layout_weight="1"
+                android:id="@+id/kensyuu2"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:ems="10"
+                android:gravity="center"
+                android:hint="コメント"
+                android:inputType="textPersonName" />
+        </LinearLayout>
+
+
+
 
         <Button
             android:id="@+id/button"
@@ -56,16 +174,7 @@
             android:layout_height="wrap_content"
             android:text="登録" />
 
-        <TextView
-            android:id="@+id/textView2"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="TextView" />
 
-        <TextView
-            android:id="@+id/textView4"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="TextView" />
     </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
+
