--- a/app/src/main/res/layout/return_bar.xml
+++ b/app/src/main/res/layout/return_bar.xml
@@ -5,9 +5,9 @@
     android:layout_height="?attr/actionBarSize"
     android:background="@color/colorPrimaryDark"
     android:theme="@style/ThemeOverlay.AppCompat.ActionBar">
-    <ImageView
+    <Button
         android:id="@+id/Return"
-        android:src="@drawable/ic_return"
+        android:background="@drawable/ic_return"
         android:layout_width="30dp"
         android:layout_height="30dp"/>
 </androidx.appcompat.widget.Toolbar>
