--- a/app/src/main/res/layout/activity_personal_page.xml
+++ b/app/src/main/res/layout/activity_personal_page.xml
@@ -48,7 +48,7 @@
         android:textColor="@color/black"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
-    <TextView
+    <EditText
         android:id="@+id/resultOfFirstInterview"
         app:layout_constraintTop_toBottomOf="@id/namae"
         app:layout_constraintEnd_toEndOf="parent"
@@ -113,7 +113,7 @@
         android:textColor="@color/black"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
-    <TextView
+    <EditText
         android:id="@+id/resultOfSecondInterview"
         app:layout_constraintTop_toBottomOf="@id/line1"
         app:layout_constraintEnd_toEndOf="parent"
@@ -178,7 +178,7 @@
         android:textColor="@color/black"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
-    <TextView
+    <EditText
         android:id="@+id/resultOfKensyuu"
         app:layout_constraintTop_toBottomOf="@id/line2"
         app:layout_constraintEnd_toEndOf="parent"
