--- a/app/src/main/res/layout/activity_resume.xml
+++ b/app/src/main/res/layout/activity_resume.xml
@@ -3,8 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".Resume_Upload">
+    android:layout_height="match_parent">
 
     <include
         android:id="@+id/aa"
@@ -19,8 +18,7 @@
         android:layout_marginRight="10dp"
         android:layout_width="match_parent"
         android:src="@drawable/resume1"
-        android:layout_height="500dp"
-        android:background="@color/grey"/>
+        android:layout_height="500dp"/>
     <TextView
         android:layout_marginTop="5dp"
         android:layout_width="wrap_content"
