--- a/app/src/main/res/layout/activity_personal_page.xml
+++ b/app/src/main/res/layout/activity_personal_page.xml
@@ -66,8 +66,8 @@
 
                 <com.google.android.material.textfield.TextInputLayout xmlns:app="http://schemas.android.com/apk/res-auto"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1"
+                    android:layout_height="wrap_content"
+              android:layout_weight="1"
                     app:passwordToggleEnabled="false">
 
                     <EditText
@@ -82,28 +82,21 @@
 
 
                 <LinearLayout
-
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:id="@+id/textClick"
+                    android:gravity="center"
+                    android:layout_weight="1"
+                    android:layout_width="200dp"
+                    android:layout_height="match_parent"
                     android:orientation="vertical">
 
-                    <com.google.android.material.textfield.TextInputLayout
-
-
-                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
-                        android:layout_width="wrap_content"
-                        android:id="@+id/resultOfFirstInterview2"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center">
-
-                        <AutoCompleteTextView
+                        <TextView
                             android:id="@+id/resultOfFirstInterview"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:gravity="center"
                             android:inputType="none"
                             android:text="結果選び" />
-                    </com.google.android.material.textfield.TextInputLayout>
+
                 </LinearLayout>
 
             </LinearLayout>
@@ -166,28 +159,23 @@
                 </com.google.android.material.textfield.TextInputLayout>
 
 
-                <LinearLayout
 
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                <LinearLayout
+                    android:id="@+id/textClick2"
+                    android:gravity="center"
+                    android:layout_weight="1"
+                    android:layout_width="200dp"
+                    android:layout_height="match_parent"
                     android:orientation="vertical">
 
-                    <com.google.android.material.textfield.TextInputLayout
-
-                        android:id="@+id/resultOfSecondInterview2"
-                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
+                    <TextView
+                        android:id="@+id/resultOfSecondInterview"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_gravity="center">
+                        android:gravity="center"
+                        android:inputType="none"
+                        android:text="結果選び" />
 
-                        <AutoCompleteTextView
-                            android:id="@+id/resultOfSecondInterview"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:gravity="center"
-                            android:inputType="none"
-                            android:text="結果選び" />
-                    </com.google.android.material.textfield.TextInputLayout>
                 </LinearLayout>
 
             </LinearLayout>
@@ -250,28 +238,23 @@
                 </com.google.android.material.textfield.TextInputLayout>
 
 
-                <LinearLayout
 
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                <LinearLayout
+                    android:id="@+id/textClick3"
+                    android:gravity="center"
+                    android:layout_weight="1"
+                    android:layout_width="200dp"
+                    android:layout_height="match_parent"
                     android:orientation="vertical">
 
-                    <com.google.android.material.textfield.TextInputLayout
-
-                        android:id="@+id/resultOfKensyuu2"
-                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
+                    <TextView
+                        android:id="@+id/resultOfKensyuu"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_gravity="center">
+                        android:gravity="center"
+                        android:inputType="none"
+                        android:text="結果選び" />
 
-                        <AutoCompleteTextView
-                            android:id="@+id/resultOfKensyuu"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:gravity="center"
-                            android:inputType="none"
-                            android:text="結果選び" />
-                    </com.google.android.material.textfield.TextInputLayout>
                 </LinearLayout>
 
             </LinearLayout>
