チャンタントゥアン

--- a/app/src/main/res/layout/activity_face_to_face_picker.xml
+++ b/app/src/main/res/layout/activity_face_to_face_picker.xml
@@ -4,11 +4,17 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/colorPrimaryDark"
     tools:context=".FaceToFacePicker">
-
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        >
     <LinearLayout
-        android:layout_width="409dp"
-        android:layout_height="729dp"
+        android:background="@color/white"
+        android:layout_margin="10dp"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -16,15 +22,25 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <EditText
+            android:layout_marginTop="10dp"
             android:id="@+id/editTextTextPersonName"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:ems="10"
             android:gravity="center"
-            android:hint="名前"
+            android:hint="面接者の名前入力"
             android:inputType="textPersonName" />
 
 
+
+        <TextView
+            android:layout_marginTop="10dp"
+            android:gravity="center"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="一次面接"
+            android:textSize="25dp"
+            android:textColor="@color/black"/>
 
 
 
@@ -32,17 +48,6 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
-
-            <EditText
-                android:layout_weight="1"
-                android:id="@+id/x1k"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:ems="10"
-                android:gravity="center"
-                android:hint="結果"
-                android:inputType="textPersonName" />
-
             <EditText
                 android:layout_weight="1"
                 android:id="@+id/x1n"
@@ -55,23 +60,7 @@
 
             <EditText
                 android:layout_weight="1"
-                android:id="@+id/x1km"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:ems="10"
-                android:gravity="center"
-                android:hint="コメント"
-                android:inputType="textPersonName" />
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
-
-            <EditText
-                android:layout_weight="1"
-                android:id="@+id/x2k"
+                android:id="@+id/x1k"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:ems="10"
@@ -79,6 +68,31 @@
                 android:hint="結果"
                 android:inputType="textPersonName" />
 
+
+
+        </LinearLayout>
+        <EditText
+            android:id="@+id/x1km"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:ems="10"
+            android:gravity="center"
+            android:hint="コメント"
+            android:inputType="textPersonName" />
+
+        <TextView
+            android:layout_marginTop="10dp"
+            android:gravity="center"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="二次面接"
+            android:textSize="25dp"
+            android:textColor="@color/black"/>
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
             <EditText
                 android:layout_weight="1"
                 android:id="@+id/x2n"
@@ -91,29 +105,39 @@
 
             <EditText
                 android:layout_weight="1"
-                android:id="@+id/x2km"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:ems="10"
-                android:gravity="center"
-                android:hint="コメント"
-                android:inputType="textPersonName" />
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
-
-            <EditText
-                android:layout_weight="1"
-                android:id="@+id/x3k"
+                android:id="@+id/x2k"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:ems="10"
                 android:gravity="center"
                 android:hint="結果"
                 android:inputType="textPersonName" />
+
+
+
+        </LinearLayout>
+        <EditText
+            android:id="@+id/x2km"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:ems="10"
+            android:gravity="center"
+            android:hint="コメント"
+            android:inputType="textPersonName" />
+
+        <TextView
+            android:layout_marginTop="10dp"
+            android:gravity="center"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="研修"
+            android:textSize="25dp"
+            android:textColor="@color/black"/>
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
 
             <EditText
                 android:layout_weight="1"
@@ -124,18 +148,37 @@
                 android:gravity="center"
                 android:hint="日時"
                 android:inputType="textPersonName" />
-
             <EditText
                 android:layout_weight="1"
-                android:id="@+id/x3km"
+                android:id="@+id/x3k"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:ems="10"
                 android:gravity="center"
-                android:hint="コメント"
+                android:hint="結果"
                 android:inputType="textPersonName" />
-        </LinearLayout>
 
+
+
+        </LinearLayout>
+        <EditText
+            android:id="@+id/x3km"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:ems="10"
+            android:gravity="center"
+            android:hint="コメント"
+            android:inputType="textPersonName" />
+
+
+        <TextView
+            android:layout_marginTop="10dp"
+            android:gravity="center"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="入社"
+            android:textSize="25dp"
+            android:textColor="@color/black"/>
 
         <LinearLayout
             android:layout_width="wrap_content"
@@ -165,16 +208,34 @@
                 android:inputType="textPersonName" />
         </LinearLayout>
 
+        <TextView
+            android:layout_marginTop="10dp"
+            android:gravity="center"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="写真を選んでください"
+            android:textSize="25dp"
+            android:textColor="@color/black"/>
 
-
+        <ImageView
+            android:layout_marginTop="10dp"
+            android:layout_width="match_parent"
+            android:layout_height="500dp"
+            android:src="@drawable/resume1"/>
 
         <Button
             android:id="@+id/button"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="登録" />
+            android:layout_gravity="center"
+            android:layout_marginTop="20dp"
+            android:layout_marginBottom="20dp"
+            android:gravity="center"
+            android:text="登録"
+            android:textColor="@color/black" />
 
 
     </LinearLayout>
+    </ScrollView>
 </androidx.constraintlayout.widget.ConstraintLayout>
 
