--- a/app/src/main/res/layout/activity_personal_page.xml
+++ b/app/src/main/res/layout/activity_personal_page.xml
@@ -64,10 +64,11 @@
                 android:orientation="horizontal">
 
 
-                <com.google.android.material.textfield.TextInputLayout xmlns:app="http://schemas.android.com/apk/res-auto"
+                <com.google.android.material.textfield.TextInputLayout
+                    xmlns:app="http://schemas.android.com/apk/res-auto"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-              android:layout_weight="1"
+                    android:layout_weight="1"
                     app:passwordToggleEnabled="false">
 
                     <EditText
@@ -88,7 +89,11 @@
                     android:layout_width="200dp"
                     android:layout_height="match_parent"
                     android:orientation="vertical">
-
+                    <com.google.android.material.textfield.TextInputLayout
+                        xmlns:app="http://schemas.android.com/apk/res-auto"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        app:passwordToggleEnabled="false">
                         <TextView
                             android:id="@+id/resultOfFirstInterview"
                             android:layout_width="wrap_content"
@@ -96,6 +101,8 @@
                             android:gravity="center"
                             android:inputType="none"
                             android:text="結果選び" />
+                    </com.google.android.material.textfield.TextInputLayout>
+
 
                 </LinearLayout>
 
