--- a/app/src/main/res/layout/activity_face_to_face_picker.xml
+++ b/app/src/main/res/layout/activity_face_to_face_picker.xml
@@ -23,6 +23,16 @@
 
         <EditText
             android:layout_marginTop="10dp"
+            android:id="@+id/email"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:ems="10"
+            android:gravity="center"
+            android:hint="メール入力"
+            android:inputType="textPersonName" />
+
+        <EditText
+            android:layout_marginTop="10dp"
             android:id="@+id/editTextTextPersonName"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -218,6 +228,7 @@
             android:textColor="@color/black"/>
 
         <ImageView
+            android:id="@+id/resumeImage"
             android:layout_marginTop="10dp"
             android:layout_width="match_parent"
             android:layout_height="500dp"
