--- a/app/src/main/res/layout/activity_personal_page.xml
+++ b/app/src/main/res/layout/activity_personal_page.xml
@@ -35,6 +35,11 @@
                 android:layout_height="match_parent"
                 android:layout_weight="1"
                 app:passwordToggleEnabled="false">
+                <TextView
+                    android:visibility="gone"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/imageURl"/>
 
                 <EditText
                     android:id="@+id/edtNameId"
@@ -43,6 +48,22 @@
                     android:ems="10"
                     android:gravity="center"
                     android:hint="面接者の名前"
+                    android:inputType="textPersonName" />
+            </com.google.android.material.textfield.TextInputLayout>
+
+            <com.google.android.material.textfield.TextInputLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                app:passwordToggleEnabled="false">
+
+                <EditText
+                    android:id="@+id/edtEmailId"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:ems="10"
+                    android:gravity="center"
+                    android:hint="面接者のメール"
                     android:inputType="textPersonName" />
             </com.google.android.material.textfield.TextInputLayout>
 
@@ -95,7 +116,17 @@
                         android:layout_height="wrap_content"
                         app:passwordToggleEnabled="false">
                         <TextView
+                            android:layout_gravity="center"
                             android:id="@+id/resultOfFirstInterview"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:gravity="center"
+                            android:inputType="none"
+                            android:text="結果選び" />
+                        <TextView
+                            android:visibility="gone"
+                            android:layout_gravity="center"
+                            android:id="@+id/resultOfFirstInterview2"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:gravity="center"
@@ -182,6 +213,15 @@
                         android:gravity="center"
                         android:inputType="none"
                         android:text="結果選び" />
+                    <TextView
+                        android:visibility="gone"
+                        android:layout_gravity="center"
+                        android:id="@+id/resultOfSecondInterview2"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:gravity="center"
+                        android:inputType="none"
+                        android:text="結果選び" />
 
                 </LinearLayout>
 
@@ -256,6 +296,15 @@
 
                     <TextView
                         android:id="@+id/resultOfKensyuu"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:gravity="center"
+                        android:inputType="none"
+                        android:text="結果選び" />
+                    <TextView
+                        android:visibility="gone"
+                        android:layout_gravity="center"
+                        android:id="@+id/resultOfKensyuu2"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:gravity="center"
@@ -350,6 +399,13 @@
                     android:textSize="25dp" />
 
             </com.google.android.material.textfield.TextInputLayout>
+            <ImageView
+                android:id="@+id/img"
+                android:layout_marginTop="20dp"
+                android:layout_marginBottom="20dp"
+                android:layout_width="match_parent"
+                android:layout_height="500dp"
+                android:src="@drawable/resume1"/>
             <Button
                 android:layout_marginBottom="20dp"
                 android:id="@+id/hozon"
