--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -61,7 +61,7 @@
         android:drawablePadding="16dp"
         android:ems="10"
         android:hint="メール"
-        android:inputType="text"
+        android:inputType="textEmailAddress"
         android:padding="16dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -79,7 +79,7 @@
         android:drawablePadding="16dp"
         android:ems="10"
         android:hint="パスワード"
-        android:inputType="textPassword"
+        android:inputType="textWebPassword"
         android:padding="16dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
