--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -62,7 +62,7 @@
         android:drawablePadding="16dp"
         android:ems="10"
         android:hint="メール"
-        android:inputType="text"
+        android:inputType="textEmailAddress"
         android:padding="16dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -81,7 +81,7 @@
         android:drawablePadding="16dp"
         android:ems="10"
         android:hint="メールを確認"
-        android:inputType="text"
+        android:inputType="textEmailAddress"
         android:padding="16dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
