--- a/app/src/main/res/layout/activity_face_to_face_picker.xml
+++ b/app/src/main/res/layout/activity_face_to_face_picker.xml
@@ -29,7 +29,7 @@
             android:ems="10"
             android:gravity="center"
             android:hint="メール入力"
-            android:inputType="textPersonName" />
+            android:inputType="textEmailAddress" />
 
         <EditText
             android:layout_marginTop="10dp"
@@ -55,7 +55,7 @@
 
 
         <LinearLayout
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
             <EditText
@@ -66,9 +66,10 @@
                 android:ems="10"
                 android:gravity="center"
                 android:hint="日時"
-                android:inputType="textPersonName" />
+                android:inputType="datetime" />
 
-            <EditText
+
+            <TextView
                 android:layout_weight="1"
                 android:id="@+id/x1k"
                 android:layout_width="match_parent"
@@ -100,7 +101,7 @@
             android:textColor="@color/black"/>
 
         <LinearLayout
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
             <EditText
@@ -111,9 +112,9 @@
                 android:ems="10"
                 android:gravity="center"
                 android:hint="日時"
-                android:inputType="textPersonName" />
+                android:inputType="datetime" />
 
-            <EditText
+            <TextView
                 android:layout_weight="1"
                 android:id="@+id/x2k"
                 android:layout_width="match_parent"
@@ -145,7 +146,7 @@
             android:textColor="@color/black"/>
 
         <LinearLayout
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
 
@@ -157,8 +158,8 @@
                 android:ems="10"
                 android:gravity="center"
                 android:hint="日時"
-                android:inputType="textPersonName" />
-            <EditText
+                android:inputType="datetime" />
+            <TextView
                 android:layout_weight="1"
                 android:id="@+id/x3k"
                 android:layout_width="match_parent"
@@ -205,7 +206,7 @@
                 android:ems="10"
                 android:gravity="center"
                 android:hint="日時"
-                android:inputType="textPersonName" />
+                android:inputType="datetime" />
 
             <EditText
                 android:layout_weight="1"
