--- a/app/src/main/res/layout/activity_personal_page.xml
+++ b/app/src/main/res/layout/activity_personal_page.xml
@@ -115,23 +115,24 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         app:passwordToggleEnabled="false">
+
                         <TextView
-                            android:layout_gravity="center"
                             android:id="@+id/resultOfFirstInterview"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:gravity="center"
-                            android:inputType="none"
-                            android:text="結果選び" />
-                        <TextView
-                            android:visibility="gone"
                             android:layout_gravity="center"
-                            android:id="@+id/resultOfFirstInterview2"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
                             android:gravity="center"
                             android:inputType="none"
                             android:text="結果選び" />
+<!--                        <TextView-->
+
+<!--                            android:layout_gravity="center"-->
+<!--                            android:id="@+id/resultOfFirstInterview2"-->
+<!--                            android:layout_width="wrap_content"-->
+<!--                            android:layout_height="wrap_content"-->
+<!--                            android:gravity="center"-->
+<!--                            android:inputType="none"-->
+<!--                            android:text="結果選び" />-->
                     </com.google.android.material.textfield.TextInputLayout>
 
 
@@ -213,15 +214,15 @@
                         android:gravity="center"
                         android:inputType="none"
                         android:text="結果選び" />
-                    <TextView
-                        android:visibility="gone"
-                        android:layout_gravity="center"
-                        android:id="@+id/resultOfSecondInterview2"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:gravity="center"
-                        android:inputType="none"
-                        android:text="結果選び" />
+<!--                    <TextView-->
+
+<!--                        android:layout_gravity="center"-->
+<!--                        android:id="@+id/resultOfSecondInterview2"-->
+<!--                        android:layout_width="wrap_content"-->
+<!--                        android:layout_height="wrap_content"-->
+<!--                        android:gravity="center"-->
+<!--                        android:inputType="none"-->
+<!--                        android:text="結果選び" />-->
 
                 </LinearLayout>
 
@@ -301,15 +302,15 @@
                         android:gravity="center"
                         android:inputType="none"
                         android:text="結果選び" />
-                    <TextView
-                        android:visibility="gone"
-                        android:layout_gravity="center"
-                        android:id="@+id/resultOfKensyuu2"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:gravity="center"
-                        android:inputType="none"
-                        android:text="結果選び" />
+<!--                    <TextView-->
+
+<!--                        android:layout_gravity="center"-->
+<!--                        android:id="@+id/resultOfKensyuu2"-->
+<!--                        android:layout_width="wrap_content"-->
+<!--                        android:layout_height="wrap_content"-->
+<!--                        android:gravity="center"-->
+<!--                        android:inputType="none"-->
+<!--                        android:text="結果選び" />-->
 
                 </LinearLayout>
 
